--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,23 @@ dependencies:
   cupertino_icons: ^1.0.5
   firebase_core: ^2.1.1
   google_fonts: ^3.0.1
+  firebase_ui_auth: ^1.0.3
+  firebase_auth: ^4.1.0
+  visual_editor:
+    git:
+      url: https://github.com/visual-space/visual-editor
+      ref: develop
+  uuid: ^3.0.6
+  mime: ^1.0.2
+  firebase_storage: ^11.0.3
+  file_selector: ^0.9.2+2
+  crop_your_image: ^0.7.2
+  adaptive_dialog: ^1.8.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.10.0"
+  icons_launcher: ^2.0.3
 
 flutter_icons:
   android: "launcher_icon"
@@ -51,3 +63,26 @@ flutter_icons:
 # The following section is specific to Flutter.
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+
+icons_launcher:
+  image_path: "assets/full_icon.png"
+  platforms:
+    android:
+      enable: true
+      adaptive_background_color: '#55ace0'
+      adaptive_foreground_image: 'assets/foreground_icon.png'
+    ios:
+      enable: true
+    web:
+      enable: true
+    macos:
+      image_path: 'assets/app_icon.png'
+      enable: true
+    windows:
+      image_path: 'assets/app_icon.png'
+      enable: true
+    linux:
+      image_path: 'assets/app_icon.png'
+      enable: true
