--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ^3.0.0
 
 dependencies:
   flutter:
@@ -26,12 +26,12 @@ dependencies:
   cloud_firestore: ^4.0.3
   cloud_firestore_web: ^3.0.3
   characters: ^1.0.0
-  dart_random_choice: ^0.0.2
+  dart_random_choice: ^0.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   firebase_core: ^2.1.1
-  google_fonts: ^3.0.1
+  google_fonts: ^6.1.0
   firebase_ui_auth: ^1.0.3
   firebase_auth: ^4.1.0
   visual_editor:
