--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,7 @@ jobs:
           java-version: '12.x'
       - uses: subosito/flutter-action@v2
         with:
+          flutter-version: '3.0.0'
           channel: 'stable'
       - run: flutter clean
       - uses: bluefireteam/flutter-gh-pages@v7
